# TankgeonGame

./: .gitignore  CMakeLists.txt  LICENSE  Meeting-notes-1-12-2023.md  Meeting-notes-1511.md  Meeting-notes-22-11-2023.md  Meeting-notes.md  README.md  sfml_error.supp
doc/: readme.md
libs/: readme.md
meeting_notes/: Meeting-notes-09-11.md  README.md
plan/: readme.md
src/: BurstTank.cpp  CollisionManager.cpp  EnemyTank.cpp  Game.cpp  High_score.txt  Level.cpp  Ordnance.cpp  PlayerTank.cpp  PlayerTank.hpp  Projectile.cpp  Shield.cpp  SniperTank.cpp  Spike.cpp  StationaryTank.cpp  Tank.cpp  TankgeonHud.cpp  Wall.cpp  hello_world.cpp  main.cpp  readme.md
src/include/: BurstTank.hpp  CollisionManager.hpp  EnemyTank.hpp  Game.hpp  Item.hpp  Level.hpp  LevelData.hpp  OBB.hpp  Obstacle.hpp  Ordnance.hpp  PlayerTank.hpp  Projectile.hpp  Shield.hpp  SniperTank.hpp  Spike.hpp  StationaryTank.hpp  Tank.hpp  TankgeonHud.hpp  Wall.hpp  constants.hpp
src/levels/: level0.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level_file_prototype.txt  readme.md
tests/: Level_test.hpp  readme.md
